--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
 	"type": "phpbb-extension",
 	"description": "phpBB 3.1 extension to allow the use of group switches in HTML files",
 	"homepage": "https://github.com/phpbbmodders/groupswitches",
-	"version": "1.0.0",
-	"time": "2015-01-25",
+	"version": "1.0.1",
+	"time": "2024-01-27",
 	"keywords": ["phpbb", "extension", "group switches"],
 	"license": "GPL-2.0",
 	"authors": [
@@ -16,7 +16,7 @@
 		}
 	],
 	"require": {
-		"php": ">=5.3.3",
+		"php": ">=7.3",
 		"composer/installers": "~1.0"
 	},
 	"require-dev": {
@@ -25,7 +25,7 @@
 	"extra": {
 		"display-name": "Group Switches",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.0-RC2,<3.2.*@dev"
+			"phpbb/phpbb": ">=3.1.0-RC2"
 		}
 	}
 }
